--- a/_haml/pages/music.haml
+++ b/_haml/pages/music.haml
@@ -3,4 +3,22 @@ layout: default
 title: Faking  Music
 \---
 .music
-  music
+  .music__release.music__release--gdc
+    %a.music__cover-link{href: '/release-goddamn-cowards'}
+      %img.music__cover{src: 'images/covers/gc-cover-small.jpg', alt: 'Faking, Goddam Cowards album.'}
+      %p Goddamn Cowards
+
+  .music__release.music__release--vices
+    %a.music__cover-link{href: '/release-vices'}
+      %img.music__cover{src: 'images/covers/vices-cover-small.jpg', alt: 'Faking, Vices seven inch.'}
+      %p Vices
+
+  .music__release.music__release--ghd
+    %a.music__cover-link{href: '/release-demo'}
+      %img.music__cover{src: 'images/covers/ghd-cover-small.jpg', alt: 'Faking, Greatest Hits Demo.'}
+      %p Greatest Hits Demo
+
+  .music__release.music__release--unsane
+    %a.music__cover-link{href: '/release-unsane'}
+      %img.music__cover{src: 'images/covers/unsane-cover-small.jpg', alt: 'Faking, Unsane tribute comps.'}
+      %p A Tribute To Unsane
