--- a/_haml/pages/release-demo.haml
+++ b/_haml/pages/release-demo.haml
@@ -1,6 +1,22 @@
 \---
 layout: default
-title: Faking  - Unsane Tribute Track
+title: Faking  - Greatest Hits Demo
 \---
-.unsane
-  Unsane Tribute Compilation Track
+.release-page
+  %h2.release-page__heading Greatest Hits Demo
+
+  %img.release-page__cover{src: 'images/covers/ghd-cover.jpg', alt: 'Faking, Greatest Hits Demo.'}
+
+  %iframe.release-page__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=537193901/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'}
+
+  .release-page__info
+    %p.release-page__date Released June 3, 2013
+    %p.release-page__personel Jeff Bowne - guitar/vocals
+    %p.release-page__personel Phil Schorn - drums
+    %p.release-page__personel Mark Diehl - bass
+    %p.release-page__details Recorded on 1/4" 8 track reel to reel by BJ Howze
+    %p.release-page__details at Demo City in May 2013.
+    %p.release-page__cta
+      Download from
+      %a.releases__dl-link{href: 'https://faking.bandcamp.com/album/greatest-hits-demo', target: '_blank'}
+        Bandcamp.
