--- a/_haml/pages/release-unsane.haml
+++ b/_haml/pages/release-unsane.haml
@@ -2,5 +2,22 @@
 layout: default
 title: Faking  - Unsane Tribute Track
 \---
-.unsane
-  Unsane Tribute Compilation Track
+.release-page
+  %h2.release-page__heading A Tribute To Unsane
+
+  %img.release-page__cover{src: 'images/covers/unsane-cover.jpg', alt: 'Faking, Unsane Tribute Compilation.'}
+
+  %iframe.release-page__player{src: 'https://bandcamp.com/EmbeddedPlayer/track=609582958/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'}
+
+  .release-page__info
+    %p.release-page__details Our mutilated cover of Unsane's 'Alleged' from "Shattered, Flattered & Covered – A Tribute To Unsane" released by Antena Krzyku Records
+    %p.release-page__date Released September 11, 2017
+    %p.release-page__personel Jeff Bowne - guitar/vocals
+    %p.release-page__personel Phil Schorn - drums
+    %p.release-page__personel Mark Diehl - bass
+    %p.release-page__details Recorded and mixed by Arik Victor at Creep Recording Studio
+    %p.release-page__details Mastering: Manuel Veniani
+    %p.release-page__cta
+      Buy the LP or CD from
+      %a.releases__dl-link{href: 'http://www.antenakrzyku.pl/en/shop/va-shattered-flattered-covered-a-tribute-to-unsane2lps-2cds-preorder-release-110917', target: '_blank'}
+        Antena Krzyku Records.
