--- a/_haml/pages/release-vices.haml
+++ b/_haml/pages/release-vices.haml
@@ -2,5 +2,25 @@
 layout: default
 title: Faking  - Vices
 \---
-.vices
-  Vices
+.release-page
+  %h2.release-page__heading Vices 7"
+
+  %img.release-page__cover{src: 'images/covers/vices-cover.jpg', alt: 'Faking, Vices seven inch.'}
+
+  %iframe.release-page__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=2330586006/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'}
+
+  .release-page__info
+    %p.release-page__date Released October 14, 2014
+    %p.release-page__personel Jeff Bowne - guitar/vocals
+    %p.release-page__personel Phil Schorn - drums
+    %p.release-page__personel Mark Diehl - bass
+    %p.release-page__details Recorded and mixed by Joe Smiley
+    %p.release-page__details at Red Planet Recording Studio in Nov. 2013
+    %p.release-page__cta
+      Buy the 7" from
+      %a.releases__dl-link{href: 'http://www.reptilianrecords.com/products/528444-faking-vices-7-keystone-noise-series', target: '_blank'}
+        Reptilian Records.
+    %p.release-page__cta
+      Download from
+      %a.releases__dl-link{href: 'https://faking.bandcamp.com/album/vices', target: '_blank'}
+        Bandcamp.
