--- a/_haml/partials/releases.haml
+++ b/_haml/partials/releases.haml
@@ -13,4 +13,4 @@
 
   .releases__cover.releases__cover--unsane
     %iframe.releases__player{src: 'https://bandcamp.com/EmbeddedPlayer/track=609582958/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'}
-    %a.releases__cover-link{href: '/release-unsane'} Unsane Tribute Comp
+    %a.releases__cover-link{href: '/release-unsane'} A Tribute To Unsane
