--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,10 @@
 <a class='primary-nav__item-link' data-nav-link='' href='/press'>PRESS</a>
 </li></ul>
 
-<img alt='Faking live' class='main-content__photo' src='images/live-double-gray-thin.jpeg'>
+<img alt='Faking live' class='main-content__photo main-content__photo--thin' src='images/live-double-gray-thin.jpeg'>
 {{ content }}
 </div>
 </div>
+<script src='image-gallery.js'></script>
 </body>
 </html>
