--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,6 +35,9 @@
 
 @import 'components/main_content';
 @import 'components/primary_nav';
+@import 'components/music';
+@import 'components/shows';
+@import 'components/videos';
 @import 'components/releases';
 @import 'components/release_page';
 
