--- a/_sass/components/_main_content.scss
+++ b/_sass/components/_main_content.scss
@@ -87,3 +87,7 @@
       max-width: calc(100% + 2rem);
       margin: 0 0 1rem -1rem;
     }
+
+    .main-content__photo--thin {
+      margin-bottom: 3rem;
+    }
