--- a/_sass/components/_release_page.scss
+++ b/_sass/components/_release_page.scss
@@ -2,33 +2,46 @@
     #RELEASE-PAGE
 \*------------------------------------*/
 
-
-.release-page {}
+.release-page {
+  @include tablet-up {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+  }
+}
 
   .release-page__heading {
-    margin-bottom: 2rem;
-    font-size: 3rem;
+    text-align: center;
+    width: 100%;
   }
 
   .release-page__cover {
     display: block;
-    width: calc(100% - 6rem);
-    max-width: 500px;
+    width: 100%;
     margin: 0 auto;
-  }
 
+    @include tablet-up {
+      width: 50%;
+    }
+  }
 
   .release-page__player {
     display: block;
-    margin: 2rem auto;
+    margin: 1rem auto;
     height: 300px;
     width: 100%;
-    max-width: 500px;
     border: 0;
+
+    @include tablet-up {
+      margin: 0;
+      width: 50%;
+      height: auto;
+    }
   }
 
-
-  .release-page__info {}
+  .release-page__info {
+    margin-top: 1rem;
+  }
 
     .release-page__date {
       margin: 0;
