--- a/_sass/elements/_headings.scss
+++ b/_sass/elements/_headings.scss
@@ -1,26 +1,44 @@
 /*------------------------------------*\
-    #CONTACT-AREA
+    #HEADINGS
 \*------------------------------------*/
 
-h1 {
+// h1 {
+//   margin: 0;
+//   font-size: 5rem;
+//   font-weight: normal;
+//   // letter-spacing: 6px;
+//   text-align: center;
+// }
+
+// h2 {
+//   margin: 0 0 100px;
+//   font-size: 4rem;
+//   font-weight: normal;
+//   // letter-spacing: 7px;
+//   text-align: center;
+// }
+
+// h3 {
+//   font-size: 2.5rem;
+//   font-weight: normal;
+//   // letter-spacing: 5px;
+
+// }
+
+h1,
+.h1 {
   margin: 0;
   font-size: 5rem;
-  font-weight: normal;
-  // letter-spacing: 6px;
-  text-align: center;
 }
 
-h2 {
-  margin: 0 0 100px;
-  font-size: 4rem;
-  font-weight: normal;
-  // letter-spacing: 7px;
-  text-align: center;
+h2,
+.h2 {
+  margin: 0 0 1rem;
+  font-size: 3rem;
 }
 
-h3 {
-  font-size: 2.5rem;
-  font-weight: normal;
-  // letter-spacing: 5px;
-
+h3,
+.h3 {
+  margin-bottom: 1rem;
+  font-size: 2rem;
 }
