--- a/_haml/pages/shows.haml
+++ b/_haml/pages/shows.haml
@@ -13,6 +13,18 @@ title: Faking Shows
       %img.shows__photo{src: 'images/live/livems.jpg', alt: 'Faking live.'}
     %button.shows__image-button{ data:{gallery_image_button:''} }
       %img.shows__photo{src: 'images/live/liveny.png', alt: 'Faking live.'}
+
+  .shows__listings
+    %h3.shows__listings Upcomming Events
+
+    .shows__event
+      %span.shows__date Nov. 7
+      %span.shows__venue Century Bar
+      %span.shows__city Philadelphia, PA
+      %span.shows__bands w/ Black Lung, Queen Elephantine, Mutant Flesh
+      %a.shows__event-link{href: 'https://www.facebook.com/events/2393979930655350/'} Facebook event page
+
+
   .shows__row
     %button.shows__image-button{ data:{gallery_image_button:''} }
       %img.shows__photo{src: 'images/live/livekfn.jpg', alt: 'Faking live.'}
