--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,5 +44,9 @@
 {{ content }}
 </div>
 </div>
+<div class='footer'>
+<a class='footer__email-link' href='mailto:fakingband@gmail.com?Subject=Hail%20Satan'>fakingband@gmail.com</a>
+</div>
+
 </body>
 </html>
