--- a/_sass/settings/_colors.scss
+++ b/_sass/settings/_colors.scss
@@ -15,3 +15,4 @@ $blue:           #3F8EF2;
 
 $background-color:    $gray--light;
 $mist-color: rgba($gray--light, 0.2);
+$blue-mist-color: rgba($blue, 0.5);
