--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,6 +35,7 @@
 
 @import 'components/main_content';
 @import 'components/primary_nav';
+@import 'components/footer';
 @import 'components/music';
 @import 'components/shows';
 @import 'components/videos';
