--- a/_sass/components/_main_content.scss
+++ b/_sass/components/_main_content.scss
@@ -9,14 +9,14 @@
 
 .main-content {
   padding: 0.5rem 1rem 2rem;
-  margin: 0.5rem auto;
+  margin: 0.5rem auto 0;
   width: calc(100% - 3rem);
   background: $background-color;
 
   @include tablet-up {
     width: calc(100% - 8rem);
     max-width: 900px;
-    margin: 2rem auto;
+    margin: 2rem auto 0;
   }
 }
 
