--- a/_sass/components/_shows.scss
+++ b/_sass/components/_shows.scss
@@ -24,7 +24,7 @@
 
       &:hover {
         z-index: 1000;
-        box-shadow: -5px -5px 80px 80px $mist-color, 5px 5px 80px 80px $mist-color,;
+        box-shadow: -5px -5px 80px 80px $mist-color, 5px 5px 80px 80px $mist-color;
       }
     }
 
