--- a/_sass/elements/_headings.scss
+++ b/_sass/elements/_headings.scss
@@ -28,13 +28,21 @@
 h1,
 .h1 {
   margin: 0;
-  font-size: 5rem;
+  font-size: 4rem;
+
+  @include tablet-up {
+    font-size: 5rem;
+  }
 }
 
 h2,
 .h2 {
   margin: 0 0 1rem;
-  font-size: 3rem;
+  font-size: 2.5rem;
+
+  @include tablet-up {
+    font-size: 3rem;
+  }
 }
 
 h3,
