no comfort page

--- a/_haml/pages/music.haml
+++ b/_haml/pages/music.haml
@@ -16,7 +16,7 @@ title: Faking  Music
 
     %a.music__external-link{ href: 'https://www.discogs.com/artist/3451742-Faking-2', target: '_blank'}
       %i.fas.fa-compact-disc
-      %span.music__external-link-text View our Discogs
+      %span.music__external-link-text View on Discogs
 
 
   .music__release.music__release--gdc
