--- a/_sass/components/_videos.scss
+++ b/_sass/components/_videos.scss
@@ -8,3 +8,11 @@
   .videos__heading {
     text-align: center;
   }
+
+  .videos__video-player {
+    display: block;
+    width: 500px;
+    height: 300px;
+    margin: 0 auto;
+    border: 0;
+  }
