pre-order call to action

--- a/_haml/pages/release-no-comfort.haml
+++ b/_haml/pages/release-no-comfort.haml
@@ -1,22 +1,20 @@
 \---
 layout: default
-title: Faking  - Goddamn Cowards
+title: Faking  - No Comfort
 \---
 .release-page
-  %h2.release-page__heading Goddamn Cowards
+  %h2.release-page__heading No Comfort
 
-  %img.release-page__cover{src: 'images/covers/gc-cover.jpg', alt: 'Faking, Goddamn Cowards album.'}
-
-  %iframe.release-page__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'}
+  %img.release-page__cover{src: 'images/covers/nc-cover.jpg', alt: 'Faking, No Comfort album.'}
 
   .release-page__info
-    %p.release-page__date Released May 27, 2016
-    %p.release-page__personel Jeff Bowne - guitar/vocals
-    %p.release-page__personel Phil Schorn - drums
-    %p.release-page__personel Mark Diehl - bass
-    %p.release-page__details Recorded and mixed by Arik Victor
-    %p.release-page__details at Creep Recording Studio in Nov. 2014
+    %p.release-page__date Released November 2019 by Slugthrower Records
+    %p.release-page__personel Jeff Bowne - electric guitar / vocals
+    %p.release-page__personel Phil Schorn - acoustic drums / chains
+    %p.release-page__personel Matt Garfield - bass keys / synth
+    %p.release-page__details Recorded by Steve Poponi, mixed by Matt Weber, and mastered by Dave Downham.
+    %p.release-page__details at Gradwell House Studio in 2018
     %p.release-page__cta
-      Buy the CD or download from
-      %a.releases__dl-link{href: 'http://www.reptilianrecords.com/products/572116-faking-goddamn-cowards', target: '_blank'}
-        Reptilian Records.
+      Pre-order the 12", CD, or download from
+      %a.releases__cta-link{href: 'https://faking.bandcamp.com/album/no-comfort', target: '_blank'}
+        Bandcamp.
