--- a/_haml/pages/release-unsane.haml
+++ b/_haml/pages/release-unsane.haml
@@ -10,8 +10,8 @@ title: Faking  - Unsane Tribute Track
   %iframe.release-page__player{src: 'https://bandcamp.com/EmbeddedPlayer/track=609582958/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'}
 
   .release-page__info
-    %p.release-page__details Our mutilated cover of Unsane's 'Alleged' from "Shattered, Flattered & Covered – A Tribute To Unsane" released by Antena Krzyku Records
-    %p.release-page__date Released September 11, 2017
+    %p.release-page__details Our mutilated cover of Unsane's 'Alleged' from "Shattered, Flattered & Covered – A Tribute To Unsane"
+    %p.release-page__date Released September 2017 by Antena Krzyku Records
     %p.release-page__personel Jeff Bowne - guitar/vocals
     %p.release-page__personel Phil Schorn - drums
     %p.release-page__personel Mark Diehl - bass
@@ -19,5 +19,5 @@ title: Faking  - Unsane Tribute Track
     %p.release-page__details Mastering: Manuel Veniani
     %p.release-page__cta
       Buy the LP or CD from
-      %a.releases__dl-link{href: 'http://www.antenakrzyku.pl/en/shop/va-shattered-flattered-covered-a-tribute-to-unsane2lps-2cds-preorder-release-110917', target: '_blank'}
+      %a.releases__cta-link{href: 'http://www.antenakrzyku.pl/en/shop/va-shattered-flattered-covered-a-tribute-to-unsane2lps-2cds-preorder-release-110917', target: '_blank'}
         Antena Krzyku Records.
