--- a/_sass/components/_shows.scss
+++ b/_sass/components/_shows.scss
@@ -33,3 +33,23 @@
         display: block;
         pointer-events: none;
       }
+
+  .shows__listings {
+    margin: 3rem 0;
+  }
+
+    .shows__listings-heading {}
+
+    .shows__event {
+      margin-top: 2rem;
+    }
+
+      .shows__date {}
+
+      .shows__venue {}
+
+      .shows__city {}
+
+      .shows__bands {}
+
+      .shows__event-link {}
