--- a/css/styles.scss
+++ b/css/styles.scss
@@ -39,6 +39,7 @@
 @import 'components/music';
 @import 'components/shows';
 @import 'components/videos';
+@import 'components/press';
 @import 'components/releases';
 @import 'components/release_page';
 
