--- a/_haml/pages/music.haml
+++ b/_haml/pages/music.haml
@@ -20,6 +20,15 @@ title: Faking  Music
 
 
   .music__release.music__release--gdc
+    %a.music__cover-link{href: '/release-no-comfort'}
+      %img.music__cover{src: 'images/covers/nc-cover-small.jpg', alt: 'Faking, No Comfort album.'}
+    .music__release-info
+      %a.music__title-link{href: '/release-no-comfort'}
+        %h2.music__title No Comfort
+      %p.music__details a forthcoming 12" + CD
+      %p.music__details by Slugthrower Records
+
+  .music__release.music__release--gdc
     %a.music__cover-link{href: '/release-goddamn-cowards'}
       %img.music__cover{src: 'images/covers/gc-cover-small.jpg', alt: 'Faking, Goddam Cowards album.'}
     .music__release-info
