--- a/_haml/pages/release-goddamn-cowards.haml
+++ b/_haml/pages/release-goddamn-cowards.haml
@@ -10,13 +10,13 @@ title: Faking  - Goddamn Cowards
   %iframe.release-page__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'}
 
   .release-page__info
-    %p.release-page__date Released May 27, 2016
+    %p.release-page__date Released May 2016 by Reptilian Records
     %p.release-page__personel Jeff Bowne - guitar/vocals
     %p.release-page__personel Phil Schorn - drums
     %p.release-page__personel Mark Diehl - bass
     %p.release-page__details Recorded and mixed by Arik Victor
-    %p.release-page__details at Creep Recording Studio in Nov. 2014
+    %p.release-page__details at Creep Recording Studio in 2014
     %p.release-page__cta
       Buy the CD or download from
-      %a.releases__dl-link{href: 'http://www.reptilianrecords.com/products/572116-faking-goddamn-cowards', target: '_blank'}
+      %a.releases__cta-link{href: 'http://www.reptilianrecords.com/products/572116-faking-goddamn-cowards', target: '_blank'}
         Reptilian Records.
