--- a/_sass/components/_music.scss
+++ b/_sass/components/_music.scss
@@ -3,15 +3,18 @@
 \*------------------------------------*/
 
 
-.music {
-  @include tablet-up {
-    padding-left: 4rem;
-  }
-}
+.music {}
 
   .music__external-links {
     display: flex;
+    margin-left: 1.5rem;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: space-around;
+
+    @include tablet-up {
+      flex-direction: row;
+    }
   }
 
     .music__external-link {
@@ -19,9 +22,22 @@
       text-decoration: none;
       align-items: center;
 
+      & + & {
+        margin-top: 2rem;
+      }
+
+      @include tablet-up {
+        & + & {
+          margin-top: 0;
+        }
+      }
+
       i {
-        padding: 1px;
-        font-size: 5rem;
+        font-size: 3.5rem;
+
+        @include tablet-up {
+          font-size: 5rem;
+        }
       }
     }
 
@@ -36,7 +52,7 @@
     margin: 4rem 0;
 
     @include tablet-up {
-      margin: 5rem 0;
+      margin: 5rem 0 5rem 4rem;
     }
   }
 
