--- a/_sass/components/_releases.scss
+++ b/_sass/components/_releases.scss
@@ -3,73 +3,122 @@
 \*------------------------------------*/
 
 .releases {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-    .releases__cover {
-        position: relative;
-        width: 40vw;
-        height: 40vw;
-        max-width: 300px;
-        max-height: 300px;
-        margin: 2rem 1rem;
+  .releases__hero {
+    width: 100%;
+    margin: 2rem 0;
+  }
+
+    .releases__hero-heading-link {}
+
+      .releases__hero-heading {
+        text-align: center;
+      }
+
+    .releases__hero-cover-link {
+      display: block;
+      position: relative;
+      width: 60vw;
+      margin: 0 auto;
+      padding-top: 60vw;
+
+      @include tablet-up {
+        width: 400px;
+        padding-top: 400px;
+      }
+    }
+
+      .releases__hero-cover {
+        position: absolute;
+        top: 0;
+        width: 60vw;
+        box-shadow: 0px 0px 160px -160px $black;
+        transition: box-shadow 100ms;
+
+        &:hover {
+          z-index: 1000;
+          box-shadow: 0px 0px 160px 480px $black;
+          transition: box-shadow 16s ease-out;
+        }
 
         @include tablet-up {
-            height: auto;
-            max-height: none;
+          width: 400px;
         }
+      }
+
+      .releases__hero-title {
+        margin-top: 1rem;
+        font-size: 2rem;
+        font-weight: bold;
+        text-align: center;
+      }
+
+  .releases__cover {
+    position: relative;
+    width: 40vw;
+    height: 40vw;
+    max-width: 300px;
+    max-height: 300px;
+    margin: 2rem 1rem;
+
+    @include tablet-up {
+      height: auto;
+      max-height: none;
+    }
+  }
+
+  .releases__cover--gdc {
+    background: url('../images/covers/gc-cover-small.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .releases__cover--vices {
+    background: url('../images/covers/vices-cover-small.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .releases__cover--ghd {
+    background: url('../images/covers/ghd-cover-small.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .releases__cover--unsane {
+    background: url('../images/covers/unsane-cover-small.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+    .releases__player {
+      display: none;
+      width: 300px;
+      height: 300px;
+      border: 0;
+
+      @include tablet-up {
+        display: block;
+      }
     }
 
-    .releases__cover--gdc {
-        background: url('../images/covers/gc-cover-small.jpg');
-        background-size: 100%;
-        background-repeat: no-repeat;
+    .releases__cover-link {
+      display: inline-block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      font-size: 0;
+      font-weight: bold;
+
+      @include tablet-up {
+        position: relative;
+        margin: 1rem 0 0;
+        font-size: 2rem;
+      }
     }
-
-    .releases__cover--vices {
-        background: url('../images/covers/vices-cover-small.jpg');
-        background-size: 100%;
-        background-repeat: no-repeat;
-    }
-
-    .releases__cover--ghd {
-        background: url('../images/covers/ghd-cover-small.jpg');
-        background-size: 100%;
-        background-repeat: no-repeat;
-    }
-
-    .releases__cover--unsane {
-        background: url('../images/covers/unsane-cover-small.jpg');
-        background-size: 100%;
-        background-repeat: no-repeat;
-    }
-
-        .releases__player {
-            display: none;
-            width: 300px;
-            height: 300px;
-            border: 0;
-
-            @include tablet-up {
-                display: block;
-            }
-        }
-
-        .releases__cover-link {
-            display: inline-block;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            font-size: 0;
-            font-weight: bold;
-
-            @include tablet-up {
-                position: relative;
-                margin: 1rem 0 0;
-                font-size: 2rem;
-            }
-        }
