--- a/_sass/components/_videos.scss
+++ b/_sass/components/_videos.scss
@@ -9,10 +9,20 @@
     text-align: center;
   }
 
+  .videos__video-title {
+    margin-top: 5rem;
+    text-align: center;
+  }
+
   .videos__video-player {
     display: block;
-    width: 500px;
-    height: 300px;
+    width: 550px;
+    max-width: 80%;
+    height: 50vw;
     margin: 0 auto;
     border: 0;
+
+    @include tablet-up {
+      height: 300px;
+    }
   }
