ready to publish

--- a/_haml/pages/press.haml
+++ b/_haml/pages/press.haml
@@ -4,23 +4,27 @@ title: Faking Press
 \---
 .press
   %p.press__blurb
-    FAKING is some kind of noise-rock trio from Philly that bridges the gap between the brooding filth of Amphetamine Reptile Records and the angular aggression of Dischord Records, spanning influences from the mathy side of the Chicago scene to the most abrasive output of Seattle. Giant pounding drums, crackling bass throb, and buzz saw guitar riffs that bleed into reverb drenched seasick leads create the foundation while vocals scream and holler about shitty people doing shitty things.
+    FAKING is a noise-rock trio from Philladelphia that blends angular aggression, brooding filth, and mathy weirdness. Giant pounding drums, biting bass synth, and harsh guitar riffs that bleed into reverb drenched seasick leads create the odd-time foundation while vocals scream and holler about shitty people doing shitty things.
   %p.press__blurb
-    Picking up where their Reptilian Records released previous bands left off are local ugly-music veterans Jeff Bowne from Gunna Vahm on guitar/vocals and Phil Schorn from Gunna Vahm/Midiron Blast Shaft on drums, along with Matt Garfield from Mose Giganticus on bass/synth.
+    Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft, 10) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
 
   .press__write-up
     %a.press__link{ href: 'http://www.metalsucks.net/2016/05/24/exclusive-video-premiere-faking-not-fine' }
+      %i.fas.fa-bullhorn
       %strong Metal Sucks
       %span - Video Premiere: "Not Fine"
   .press__write-up
     %a.press__link{ href: 'http://www.noecho.net/features/track-premiere-faking-we-are-goddamn-cowards' }
+      %i.fas.fa-bullhorn
       %strong No Echo
       %span - Song Premiere: "We Are Goddamn Cowards"
   .press__write-up
     %a.press__link{ href: 'http://newnoisemagazine.com/song-premiere-faking-bored' }
-      %strong New Noise
-      %span - Maga Song Premiere: "You Got Bored"
+      %i.fas.fa-bullhorn
+      %strong New Noise Magazine
+      %span - Song Premiere: "You Got Bored"
   .press__write-up
     %a.press__link{ href: 'http://www.noecho.net/lists/10-philly-bands-not-being-included-in-the-best-punk-articles-but-should-be' }
+      %i.fas.fa-bullhorn
       %strong No Echo
       %span - 10 Philly Bands... by Mike McGinnis (Fight Amp)
