--- a/_sass/settings/_global.scss
+++ b/_sass/settings/_global.scss
@@ -56,7 +56,7 @@ body {
   color: $black;
   font-size: 1.8rem;
   font-family: $font-family-primary;
-  background: $black;
+  background: $gray--dark;
   // background-size: 100%;
   // background-image: url('../images/teethbanner.png');
   // background-repeat: no-repeat;
