--- a/_haml/pages/music.haml
+++ b/_haml/pages/music.haml
@@ -19,14 +19,14 @@ title: Faking  Music
       %span.music__external-link-text View on Discogs
 
 
-  .music__release.music__release--gdc
-    %a.music__cover-link{href: '/release-no-comfort'}
-      %img.music__cover{src: 'images/covers/nc-cover-small.jpg', alt: 'Faking, No Comfort album.'}
-    .music__release-info
-      %a.music__title-link{href: '/release-no-comfort'}
-        %h2.music__title No Comfort
-      %p.music__details a forthcoming 12" + CD
-      %p.music__details by Slugthrower Records
+  -# .music__release.music__release--gdc
+  -#   %a.music__cover-link{href: '/release-no-comfort'}
+  -#     %img.music__cover{src: 'images/covers/nc-cover-small.jpg', alt: 'Faking, No Comfort album.'}
+  -#   .music__release-info
+  -#     %a.music__title-link{href: '/release-no-comfort'}
+  -#       %h2.music__title No Comfort
+  -#     %p.music__details a forthcoming 12" + CD
+  -#     %p.music__details by Slugthrower Records
 
   .music__release.music__release--gdc
     %a.music__cover-link{href: '/release-goddamn-cowards'}
