--- a/_sass/components/_shows.scss
+++ b/_sass/components/_shows.scss
@@ -20,11 +20,13 @@
       padding: 0;
       margin: 0;
       cursor: pointer;
-      transition-duration: 300ms;
+      transition: box-shadow 400ms, transform 400ms;
 
-      &:hover {
+      &:hover:not(:focus) {
         z-index: 1000;
         box-shadow: -5px -5px 80px 80px $mist-color, 5px 5px 80px 80px $mist-color;
+        transform: scale(1.05);
+
       }
     }
 
