--- a/_haml/pages/videos.haml
+++ b/_haml/pages/videos.haml
@@ -6,9 +6,11 @@ title: Faking Videos
 
   %h2.videos__heading Videos
 
+  %h3.videos__video-title "No Comfort" Promotional Sampler Video
+  %iframe.videos__video-player{src: 'https://www.youtube.com/embed/d0jJ67rKFH4'}
+
   %h3.videos__video-title Official Music Video for "Not Fine"
   %iframe.videos__video-player{src: 'https://www.youtube.com/embed/9_-eeVlomWo'}
 
   %h3.videos__video-title Interview with Radio Static Philly
   %iframe.videos__video-player{src: 'https://www.youtube.com/embed/n3-6YLqv840'}
-
