Less Less added to press and video pages, gdc release embeds fixed.

--- a/_haml/pages/press.haml
+++ b/_haml/pages/press.haml
@@ -4,10 +4,15 @@ title: Faking Press
 \---
 .press
   %p.press__blurb
-    FAKING is a noise-rock trio from Philadelphia that blends angular aggression, brooding filth, and mathy weirdness. Giant pounding drums, biting bass synth, and harsh guitar riffs that bleed into reverb drenched seasick leads create the odd-time foundation while vocals scream and holler about shitty people doing shitty things.
+    FAKING is a noise rock trio from Philadelphia that blends angular aggression, brooding filth, and mathy weirdness. Giant pounding drums, biting bass synth, and harsh guitar riffs that bleed into reverb drenched seasick leads create the odd-time foundation while vocals scream and holler about shitty people doing shitty things.
   %p.press__blurb
     Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
 
+  .press__write-up
+    %a.press__link{ href: 'https://newnoisemagazine.com/premiere-faking-less-less/' }
+      %i.fas.fa-bullhorn
+      %strong New Noise Magazine
+      %span - Video Premiere: "Less & Less"
   .press__write-up
     %a.press__link{ href: 'http://www.metalsucks.net/2016/05/24/exclusive-video-premiere-faking-not-fine' }
       %i.fas.fa-bullhorn
