--- a/_haml/pages/videos.haml
+++ b/_haml/pages/videos.haml
@@ -6,10 +6,13 @@ title: Faking Videos
 
   %h2.videos__heading Videos
 
+  %h3.videos__video-title "Less & Less" Music Video
+  %iframe.videos__video-player{src: 'https://www.youtube.com/embed/1MB21p3J0Gs'}
+
   %h3.videos__video-title "No Comfort" Promotional Sampler Video
   %iframe.videos__video-player{src: 'https://www.youtube.com/embed/d0jJ67rKFH4'}
 
-  %h3.videos__video-title Official Music Video for "Not Fine"
+  %h3.videos__video-title "Not Fine" Music Video
   %iframe.videos__video-player{src: 'https://www.youtube.com/embed/9_-eeVlomWo'}
 
   %h3.videos__video-title Interview with Radio Static Philly
