the key added to press page

--- a/_sass/components/_main_content.scss
+++ b/_sass/components/_main_content.scss
@@ -31,8 +31,8 @@
 }
 
   .main-content__container {
-    opacity: 0;
-    animation: fade-in 300ms ease-in 100ms forwards;
+    // opacity: 0;
+    // animation: fade-in 200ms ease-in 100ms forwards;
   }
 
     .main-content__page-header {
