--- a/_haml/pages/press.haml
+++ b/_haml/pages/press.haml
@@ -9,10 +9,17 @@ title: Faking Press
     Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
 
   .press__write-up
-    %a.press__link{ href: 'https://newnoisemagazine.com/premiere-faking-less-less/' }
+    %a.press__link{ href: 'https://newnoisemagazine.com/premiere-faking-less-less' }
       %i.fas.fa-bullhorn
       %strong New Noise Magazine
       %span - Video Premiere: "Less & Less"
+
+  .press__write-up
+    %a.press__link{ href: 'https://thekey.xpn.org/2019/10/18/the-skeleton-key-halloween/' }
+      %i.fas.fa-bullhorn
+      %strong The Key
+      %span - New song debut mentioned
+
   .press__write-up
     %a.press__link{ href: 'http://www.metalsucks.net/2016/05/24/exclusive-video-premiere-faking-not-fine' }
       %i.fas.fa-bullhorn
