make cover image size more reasonable

--- a/_haml/partials/releases.haml
+++ b/_haml/partials/releases.haml
@@ -4,7 +4,7 @@
     %a.releases__hero-heading-link{href: 'https://faking.bandcamp.com/album/no-comfort'}
       %h2.releases__hero-heading Pre-order the new record!
     %a.releases__hero-cover-link{href: 'https://faking.bandcamp.com/album/no-comfort'}
-      %img.releases__hero-cover{src: 'images/covers/nc-cover.jpg', alt: 'Faking, No Comfort album.'}
+      %img.releases__hero-cover{src: 'images/covers/nc-cover-small.jpg', alt: 'Faking, No Comfort album.'}
       .releases__hero-title No Comfort
 
   .releases__cover.releases__cover--gdc
