update for No Comfort release.

--- a/_haml/pages/music.haml
+++ b/_haml/pages/music.haml
@@ -23,7 +23,7 @@ title: Faking  Music
     .music__release-info
       %a.music__title-link{href: '/release-no-comfort'}
         %h2.music__title No Comfort
-      %p.music__details a forthcoming LP + CD
+      %p.music__details an LP + CD
       %p.music__details by Slugthrower Records
 
   .music__release.music__release--gdc
