--- a/_haml/pages/release-goddamn-cowards.haml
+++ b/_haml/pages/release-goddamn-cowards.haml
@@ -16,6 +16,10 @@ title: Faking  - Goddamn Cowards
     %p.release-page__details Recorded and mixed by Arik Victor
     %p.release-page__details at Creep Recording Studio in 2014
     %p.release-page__cta
-      Buy the CD or download from
+      Download from
+      %a.releases__cta-link{href: 'https://faking.bandcamp.com/album/goddamn-cowards-2', target: '_blank'}
+        Bandcamp.
+    %p.release-page__cta
+      Buy the CD from
       %a.releases__cta-link{href: 'http://www.reptilianrecords.com/products/572116-faking-goddamn-cowards', target: '_blank'}
         Reptilian Records.
