--- a/_haml/partials/releases.haml
+++ b/_haml/partials/releases.haml
@@ -1,11 +1,16 @@
 .releases
 
-  .releases__hero
-    %a.releases__hero-heading-link{href: 'https://faking.bandcamp.com/album/no-comfort'}
-      %h2.releases__hero-heading Pre-order the new record!
-    %a.releases__hero-cover-link{href: 'https://faking.bandcamp.com/album/no-comfort'}
-      %img.releases__hero-cover{src: 'images/covers/nc-cover-small.jpg', alt: 'Faking, No Comfort album.'}
-      .releases__hero-title No Comfort
+  -# .releases__hero
+  -#   %a.releases__hero-heading-link{href: 'https://faking.bandcamp.com/album/no-comfort'}
+  -#     %h2.releases__hero-heading Latest release:
+  -#   %a.releases__hero-cover-link{href: 'https://faking.bandcamp.com/album/no-comfort'}
+  -#     %img.releases__hero-cover{src: 'images/covers/nc-cover-small.jpg', alt: 'Faking, No Comfort album.'}
+  -#     .releases__hero-title No Comfort
+
+  .releases__cover.releases__cover--nc
+    %iframe.releases__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=1837041374/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'}
+    %a.releases__cover-link{href: '/release-no-comfort'} No Comfort
+
 
   .releases__cover.releases__cover--gdc
     %iframe.releases__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=2854302309/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'}
