--- a/_sass/components/_releases.scss
+++ b/_sass/components/_releases.scss
@@ -71,6 +71,12 @@
     }
   }
 
+  .releases__cover--nc {
+    background: url('../images/covers/nc-cover-small.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
   .releases__cover--gdc {
     background: url('../images/covers/gc-cover-small.jpg');
     background-size: 100%;
