--- a/_haml/pages/press.haml
+++ b/_haml/pages/press.haml
@@ -9,34 +9,37 @@ title: Faking Press
     Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
 
   .press__write-up
+    %a.press__link{ href: 'https://cvltnation.com/hear-the-discord-and-disdain-of-faking-no-comfort-lp' }
+      %i.far.fa-newspaper
+      %strong CVLT Nation
+      %span - "No Comfort" full album stream.
+  .press__write-up
     %a.press__link{ href: 'https://newnoisemagazine.com/premiere-faking-less-less' }
-      %i.fas.fa-bullhorn
+      %i.far.fa-newspaper
       %strong New Noise Magazine
       %span - Video Premiere: "Less & Less"
-
   .press__write-up
-    %a.press__link{ href: 'https://thekey.xpn.org/2019/10/18/the-skeleton-key-halloween/' }
-      %i.fas.fa-bullhorn
+    %a.press__link{ href: 'https://thekey.xpn.org/2019/10/18/the-skeleton-key-halloween' }
+      %i.far.fa-newspaper
       %strong The Key
       %span - New song debut mentioned
-
   .press__write-up
     %a.press__link{ href: 'http://www.metalsucks.net/2016/05/24/exclusive-video-premiere-faking-not-fine' }
-      %i.fas.fa-bullhorn
+      %i.far.fa-newspaper
       %strong Metal Sucks
       %span - Video Premiere: "Not Fine"
   .press__write-up
     %a.press__link{ href: 'http://www.noecho.net/features/track-premiere-faking-we-are-goddamn-cowards' }
-      %i.fas.fa-bullhorn
+      %i.far.fa-newspaper
       %strong No Echo
       %span - Song Premiere: "We Are Goddamn Cowards"
   .press__write-up
     %a.press__link{ href: 'http://newnoisemagazine.com/song-premiere-faking-bored' }
-      %i.fas.fa-bullhorn
+      %i.far.fa-newspaper
       %strong New Noise Magazine
       %span - Song Premiere: "You Got Bored"
   .press__write-up
     %a.press__link{ href: 'http://www.noecho.net/lists/10-philly-bands-not-being-included-in-the-best-punk-articles-but-should-be' }
-      %i.fas.fa-bullhorn
+      %i.far.fa-newspaper
       %strong No Echo
       %span - 10 Philly Bands... by Mike McGinnis (Fight Amp)
