--- a/_haml/pages/release-no-comfort.haml
+++ b/_haml/pages/release-no-comfort.haml
@@ -7,6 +7,7 @@ title: Faking  - No Comfort
 
   %img.release-page__cover{src: 'images/covers/nc-cover.jpg', alt: 'Faking, No Comfort album.'}
 
+  %iframe.release-page__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=1837041374/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'}
   .release-page__info
     %p.release-page__date Released November 2019 by Slugthrower Records
     %p.release-page__personel Jeff Bowne - electric guitar / vocals
@@ -15,6 +16,6 @@ title: Faking  - No Comfort
     %p.release-page__details Recorded by Steve Poponi, mixed by Matt Weber, and mastered by Dave Downham.
     %p.release-page__details at Gradwell House Studio in 2018
     %p.release-page__cta
-      Pre-order the LP or CD
+      Buy the LP, CD, and download from
       %a.releases__cta-link{href: 'https://faking.bandcamp.com/album/no-comfort', target: '_blank'}
         Bandcamp.
