--- a/_haml/pages/shows.haml
+++ b/_haml/pages/shows.haml
@@ -15,14 +15,14 @@ title: Faking Shows
       %img.shows__photo{src: 'images/live/livecen.jpg', alt: 'Faking live.'}
 
   .shows__listings
-    %h3.shows__listings-heading Upcomming Events
+    -# %h3.shows__listings-heading Upcomming Events
 
-    .shows__event
-      .shows__date Nov. 7
-      .shows__venue Century Bar
-      .shows__city Philadelphia, PA
-      .shows__bands w/ Black Lung, Queen Elephantine, Mutant Flesh
-      %a.shows__event-link{href: 'https://www.facebook.com/events/2393979930655350/'} Facebook event page
+    -# .shows__event
+    -#   .shows__date Nov. 7
+    -#   .shows__venue Century Bar
+    -#   .shows__city Philadelphia, PA
+    -#   .shows__bands w/ Black Lung, Queen Elephantine, Mutant Flesh
+    -#   %a.shows__event-link{href: 'https://www.facebook.com/events/2393979930655350/'} Facebook event page
 
   .shows__row
     %button.shows__image-button{ data:{gallery_image_button:''} }
