--- a/_sass/components/_main_content.scss
+++ b/_sass/components/_main_content.scss
@@ -23,10 +23,10 @@
 .main-content--home {}
 
 .main-content--default {
-  margin: 0.5rem auto;
+  margin: 0.5rem auto 4rem;
 
   @include tablet-up {
-    margin: 2rem auto;
+    margin: 2rem auto 5rem;
   }
 }
 
