--- a/_haml/pages/shows.haml
+++ b/_haml/pages/shows.haml
@@ -8,11 +8,11 @@ title: Faking Shows
 
   .shows__row
     %button.shows__image-button{ data:{gallery_image_button:''} }
-      %img.shows__photo{src: 'images/live/livespazz.png', alt: 'Faking live.'}
+      %img.shows__photo{src: 'images/live/livespazz-sm.png', alt: 'Faking live.', data:{image:'images/live/livespazz.png'}}
     %button.shows__image-button{ data:{gallery_image_button:''} }
-      %img.shows__photo{src: 'images/live/livems.jpg', alt: 'Faking live.'}
+      %img.shows__photo{src: 'images/live/livems-sm.jpg', alt: 'Faking live.', data:{image:'images/live/livems.jpg'}}
     %button.shows__image-button{ data:{gallery_image_button:''} }
-      %img.shows__photo{src: 'images/live/livecen.jpg', alt: 'Faking live.'}
+      %img.shows__photo{src: 'images/live/livecen-sm.jpg', alt: 'Faking live.', data:{image:'images/live/livecen.jpg'}}
 
   .shows__listings
     -# %h3.shows__listings-heading Upcomming Events
@@ -26,8 +26,10 @@ title: Faking Shows
 
   .shows__row
     %button.shows__image-button{ data:{gallery_image_button:''} }
-      %img.shows__photo{src: 'images/live/livekfn.jpg', alt: 'Faking live.'}
+      %img.shows__photo{src: 'images/live/livekfn-sm.jpg', alt: 'Faking live.', data:{image:'images/live/livekfn.jpg'}}
     %button.shows__image-button{ data:{gallery_image_button:''} }
-      %img.shows__photo{src: 'images/live/livehide.png', alt: 'Faking live.'}
+      %img.shows__photo{src: 'images/live/livehide-sm.png', alt: 'Faking live.', data:{image:'images/live/livehide.png'}}
     %button.shows__image-button{ data:{gallery_image_button:''} }
-      %img.shows__photo{src: 'images/live/liveny.png', alt: 'Faking live.'}
+      %img.shows__photo{src: 'images/live/liveny-sm.png', alt: 'Faking live.', data:{image:'images/live/liveny.png'}}
+
+%script{ src: 'image-gallery.js' }
