--- a/_sass/components/_press.scss
+++ b/_sass/components/_press.scss
@@ -18,3 +18,37 @@
         font-size: 2rem;
       }
     }
+
+  .press__gallery {
+    margin: 4rem 0 2rem;
+  }
+
+    .press__gallery-instructions {
+      margin: 0;
+    }
+
+    .press__image-button {
+      border: 0;
+      padding: 0;
+      margin: 2rem 0;
+      border-radius: $border-radius-large;
+      overflow: hidden;
+      transition: box-shadow 400ms, transform 400ms;
+      cursor: pointer;
+
+      &:hover:not(:focus) {
+        z-index: 1000;
+        box-shadow: -5px -5px 40px 40px $mist-color, 5px 5px 40px 40px $mist-color;
+        transform: scale(1.02);
+      }
+
+      @include  tablet-up {
+        margin: 4rem 0;
+      }
+    }
+
+      .press__photo {
+        width: 100%;
+        display: block;
+        pointer-events: none;
+      }
