--- a/_haml/pages/press.haml
+++ b/_haml/pages/press.haml
@@ -45,7 +45,7 @@ title: Faking Press
         %strong No Echo
         %span - 10 Philly Bands... by Mike McGinnis (Fight Amp)
 
-  .press__gallery{ data:{press_gallery:''} }
+  .press__gallery#photos{ data:{press_gallery:''} }
     %h2.press__gallery-instructions
       Click one of these images for full size hi-res press photos:
     %button.press__image-button{ data:{press_gallery_image_button:''} }
